--- a/webapproot/index.html
+++ b/webapproot/index.html
@@ -21,7 +21,7 @@ var wmChromeFramePath = "http://google.com/chrome";
 
 <title>educacion_comunitaria</title>
 <link rel="shortcut icon" href="resources/images/logos/favicon.ico" />
-<script>var wmThemeUrl = "lib/dojo/dojo/../../../lib/wm/base/widget/themes/Bootstrap//theme.css";</script>
+<script>var wmThemeUrl = "../wavemaker/lib/dojo/dojo/../../../lib/wm/base/widget/themes/Bootstrap/theme.css";</script>
 <style type="text/css">
 	#wavemakerNode {
 		height: 100%;
@@ -36,6 +36,12 @@ var wmChromeFramePath = "http://google.com/chrome";
 
 <!-- Boot Wavemaker -->
 <script type="text/javascript" src="config.js"></script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+<script src="resources/javascript/jquery.fileDownload.js"></script>
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/base/jquery-ui.css" type="text/css" />
+<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/cupertino/jquery-ui.css" type="text/css" />
 </head>
 <body class="tundra">
 	<!-- Begin Educación_Comunitaria -->
